; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/imx/extr_ipuv3-crtc.c_ipu_crtc_atomic_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/imx/extr_ipuv3-crtc.c_ipu_crtc_atomic_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_crtc = type { i32 }
%struct.drm_crtc_state = type { i32 }
%struct.ipu_crtc = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.ipu_soc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_crtc*, %struct.drm_crtc_state*)* @ipu_crtc_atomic_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipu_crtc_atomic_enable(%struct.drm_crtc* %0, %struct.drm_crtc_state* %1) #0 {
  %3 = alloca %struct.drm_crtc*, align 8
  %4 = alloca %struct.drm_crtc_state*, align 8
  %5 = alloca %struct.ipu_crtc*, align 8
  %6 = alloca %struct.ipu_soc*, align 8
  store %struct.drm_crtc* %0, %struct.drm_crtc** %3, align 8
  store %struct.drm_crtc_state* %1, %struct.drm_crtc_state** %4, align 8
  %7 = load %struct.drm_crtc*, %struct.drm_crtc** %3, align 8
  %8 = call %struct.ipu_crtc* @to_ipu_crtc(%struct.drm_crtc* %7)
  store %struct.ipu_crtc* %8, %struct.ipu_crtc** %5, align 8
  %9 = load %struct.ipu_crtc*, %struct.ipu_crtc** %5, align 8
  %10 = getelementptr inbounds %struct.ipu_crtc, %struct.ipu_crtc* %9, i32 0, i32 2
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call %struct.ipu_soc* @dev_get_drvdata(i32 %13)
  store %struct.ipu_soc* %14, %struct.ipu_soc** %6, align 8
  %15 = load %struct.ipu_soc*, %struct.ipu_soc** %6, align 8
  %16 = call i32 @ipu_prg_enable(%struct.ipu_soc* %15)
  %17 = load %struct.ipu_soc*, %struct.ipu_soc** %6, align 8
  %18 = call i32 @ipu_dc_enable(%struct.ipu_soc* %17)
  %19 = load %struct.ipu_crtc*, %struct.ipu_crtc** %5, align 8
  %20 = getelementptr inbounds %struct.ipu_crtc, %struct.ipu_crtc* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @ipu_dc_enable_channel(i32 %21)
  %23 = load %struct.ipu_crtc*, %struct.ipu_crtc** %5, align 8
  %24 = getelementptr inbounds %struct.ipu_crtc, %struct.ipu_crtc* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @ipu_di_enable(i32 %25)
  ret void
}

declare dso_local %struct.ipu_crtc* @to_ipu_crtc(%struct.drm_crtc*) #1

declare dso_local %struct.ipu_soc* @dev_get_drvdata(i32) #1

declare dso_local i32 @ipu_prg_enable(%struct.ipu_soc*) #1

declare dso_local i32 @ipu_dc_enable(%struct.ipu_soc*) #1

declare dso_local i32 @ipu_dc_enable_channel(i32) #1

declare dso_local i32 @ipu_di_enable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
